--- a/FomoCryptoNews.Client/FomoCryptoNews.Client.csproj
+++ b/FomoCryptoNews.Client/FomoCryptoNews.Client.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Bogus" Version="35.5.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.6" />
     </ItemGroup>
 
 </Project>
